--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -103,11 +103,16 @@
   font-weight: bold;
   cursor: pointer;
 
-  transition: all 300ms;
+  transition: background-color 300ms;
 }
 
-.commentForm button[type="submit"]:hover {
-  background: var(--green-300);
+.commentForm button[type="submit"]:not(:disabled):hover {
+  background-color: var(--green-300);
+}
+
+.commentForm button[type="submit"]:disabled {
+  opacity: 0.7;
+  cursor: not-allowed;
 }
 
 .commentList {
